--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -12,22 +12,22 @@
 				<img alt="The Standard Ebooks logo" src="../images/logo.svg" epub:type="z3998:publisher-logo"/>
 			</header>
 			<p><i epub:type="se:name.publication.book">Great Expectations</i><br/>
-			was published in YEAR by<br/>
+			was published in 1861 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Charles_Dickens">Charles Dickens</a>.</p>
 			<p>This ebook was produced for the<br/>
 			<a href="https://standardebooks.org">Standard Ebooks project</a><br/>
 			by<br/>
-			<a href="PRODUCER_URL">PRODUCER</a>,<br/>
+			<a href="https://lauraklappenbach.com">Laura Klappenbach</a>,<br/>
 			and is based on a transcription produced in 1998 by<br/>
 			<b class="name">An Anonymous Volunteer</b>, and <b class="name">David Widger</b><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/1400">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
-			<a href="IA_URL">Internet Archive</a>.</p>
+			<a href="https://catalog.hathitrust.org/Record/011405484">HathiTrust Digital Library</a>.</p>
 			<p>The cover page is adapted from<br/>
-			<i epub:type="se:name.visual-art.painting">PAINTING</i>,<br/>
-			a painting completed in YEAR by<br/>
-			<a href="ARTIST_WIKI_URL">ARTIST</a>.<br/>
+			<i epub:type="se:name.visual-art.painting">Self-Portrait</i>,<br/>
+			a painting completed in 1812 by<br/>
+			<a href="https://en.wikipedia.org/wiki/Joseph_Paelinck">Joseph Paelinck</a>.<br/>
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in 2014 and 2009 by<br/>
