--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -14,8 +14,8 @@
 			<p><i epub:type="se:name.publication.book">Great Expectations</i><br/>
 			was published in 1861 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Charles_Dickens">Charles Dickens</a>.</p>
-			<p>This ebook was produced for the<br/>
-			<a href="https://standardebooks.org">Standard Ebooks project</a><br/>
+			<p>This ebook was produced for<br/>
+			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
 			by<br/>
 			<a href="https://lauraklappenbach.com">Laura Klappenbach</a>,<br/>
 			and is based on a transcription produced in 1998 by<br/>
